--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -16,10 +16,11 @@
             <h2></h2>
             <form class="form-horizontal" action="." method="post">
                 {% csrf_token %}
+                <div class="col-md-offset-2" style="color: red; text-align: center">{{ error }}</div>
                 <div class="form-group">
-                    <label class="control-label col-sm-2" for="email">User:</label>
+                    <label class="control-label col-sm-2" for="email">Email:</label>
                     <div class="col-sm-10">
-                        <input type="username" class="form-control" id="username" name="username">
+                        <input type="email" class="form-control" id="username" name="username">
                     </div>
                 </div>
                 <div class="form-group">
