--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,42 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>GEO - Login</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% include 'header.html' %}
 
-    <div class="container" style="margin-top: 5vh">
-        <div class="col-md-4 col-md-offset-4">
-            <h2 style="text-align: center">Zaloguj się</h2>
-            <h2></h2>
-            <form class="form-horizontal" action="." method="post">
-                {% csrf_token %}
-                <div class="col-md-offset-2" style="color: red; text-align: center">{{ error }}</div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="username">Email:</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="username" name="username">
-                    </div>
+<div class="container" style="margin-top: 5vh">
+    <div class="col-md-4 col-md-offset-4">
+        <h2 style="text-align: center">Zaloguj się</h2>
+        <h2></h2>
+        <form class="form-horizontal" action="." method="post">
+            {% csrf_token %}
+            <div class="col-md-offset-2" style="color: red; text-align: center">{{ error }}</div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="username">Email:</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="username" name="username">
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2" for="pwd">Hasło:</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="pwd" name="pwd">
-                    </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="pwd">Hasło:</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="pwd" name="pwd">
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Zaloguj</button>
-                    </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Zaloguj</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
-
-</body>
-</html>
+</div>
