--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -48,6 +48,13 @@
             </div>
 
             <div class="form-group">
+                <label class="control-label col-sm-4" for="stan">Stan:</label>
+                <div class="col-sm-8">
+                    <input class="form-control" id="stan" name="stan">
+                </div>
+            </div>
+
+            <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-8">
                     <button type="submit" class="btn btn-default">Dodaj</button>
                 </div>
