--- a/templates/cars/list.html
+++ b/templates/cars/list.html
@@ -2,24 +2,38 @@
 
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-10 col-md-offset-1">
-        <h2 style="text-align: center">Lista Samochodów:</h2>
 
-        {% for car in all_cars %}
-            <div class="panel panel-primary">
-                <div class="panel-heading">{{ car.car_id }}</div>
-                <div class="panel-body">
-                    <p><b>Marka:</b> {{ car.car_id }}</p>
-                    <p><b>Model:</b> {{ car.car_id }}</p>
-                    <p><b>Rocznik:</b> {{ car.car_id }}</p>
-                    <p><b>Pojemność silnika:</b> {{ car.car_id }}</p>
-                    <p><b>Typ nadwozia:</b> {{ car.car_id }}</p>
-                    <p><b>Numer ubezpieczenia:</b> {{ car.car_id }}</p>
-                    <p><b>Dostępność:</b> {{ car.car_id }}</p>
-                    <p><b>Stan:</b> {{ car.car_id }}</p>
-                    <p><b>Ostatnio przesłane współrzędne:</b> {{ car.car_id }}</p>
+    <div class="row">
+        <div class="col-md-8">
+            <h2 style="text-align: center">Lista Samochodów:</h2>
+        </div>
+        <div class="col-md-2">
+            <a href="add" class="btn btn-default" role="button">Dodaj Samochód</a>
+        </div>
+    </div>
+
+        {% if all_cars %}
+
+            {% for car in all_cars %}
+                <div class="panel panel-primary">
+                    <div class="panel-heading">{{ car.car_id }}</div>
+                    <div class="panel-body">
+                        <p><b>Marka:</b> {{ car.car_id }}</p>
+                        <p><b>Model:</b> {{ car.car_id }}</p>
+                        <p><b>Rocznik:</b> {{ car.car_id }}</p>
+                        <p><b>Pojemność silnika:</b> {{ car.car_id }}</p>
+                        <p><b>Typ nadwozia:</b> {{ car.car_id }}</p>
+                        <p><b>Numer ubezpieczenia:</b> {{ car.car_id }}</p>
+                        <p><b>Dostępność:</b> {{ car.car_id }}</p>
+                        <p><b>Stan:</b> {{ car.car_id }}</p>
+                        <p><b>Ostatnio przesłane współrzędne:</b> {{ car.car_id }}</p>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+
+        {% else %}
+            <h3 style="text-align: center">Brak samochodów.</h3>
+        {% endif %}
 
     </div>
 </div>
