--- a/templates/cars/list.html
+++ b/templates/cars/list.html
@@ -3,14 +3,20 @@
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-10 col-md-offset-1">
 
-    <div class="row">
-        <div class="col-md-8">
-            <h2 style="text-align: center">Lista Samochodów:</h2>
+        {% if success_message %}
+            <div class="alert alert-success">
+                {{ success_message }}
+            </div>
+        {% endif %}
+
+        <div class="row">
+            <div class="col-md-8">
+                <h2 style="text-align: center">Lista Samochodów:</h2>
+            </div>
+            <div class="col-md-2">
+                <a href="add" class="btn btn-default" role="button">Dodaj Samochód</a>
+            </div>
         </div>
-        <div class="col-md-2">
-            <a href="add" class="btn btn-default" role="button">Dodaj Samochód</a>
-        </div>
-    </div>
 
         {% if all_cars %}
 
