--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 col-md-offset-2">
         <h2 style="text-align: center">Dodaj Samochód</h2>
         <h2></h2>
-        <form class="form-horizontal" action="/cars/new" method="post">
+        <form class="form-horizontal" action="/cars/add" method="post">
             <div class="form-group">
                 <label class="control-label col-sm-4" for="marka">Marka:</label>
                 <div class="col-sm-8">
@@ -56,7 +56,7 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-default">Dodaj</button>
+                    <button type="submit" class="btn btn-default">Zapisz</button>
                 </div>
             </div>
         </form>
