Updated field names and id's for adding cars.

--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -6,9 +6,9 @@
         <h2></h2>
         <form class="form-horizontal" action="/cars/add" method="post">
             <div class="form-group">
-                <label class="control-label col-sm-4" for="marka">Marka:</label>
+                <label class="control-label col-sm-4" for="brand">Marka:</label>
                 <div class="col-sm-8">
-                    <input class="form-control" id="marka" name="marka">
+                    <input class="form-control" id="brand" name="brand">
                 </div>
             </div>
 
@@ -20,37 +20,37 @@
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-4" for="rocznik">Rocznik:</label>
+                <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
                 <div class="col-sm-8">
-                    <input type="number" class="form-control" id="rocznik" name="rocznik">
+                    <input type="number" class="form-control" id="production_year" name="production_year">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-4" for="pojemnosc">Pojemność silnika:</label>
+                <label class="control-label col-sm-4" for="displacement">Pojemność silnika:</label>
                 <div class="col-sm-8">
-                    <input type="number" class="form-control" id="pojemnosc" name="pojemnosc">
+                    <input type="number" class="form-control" id="displacement" name="displacement">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-4" for="nadwozie">Typ nadwozia:</label>
+                <label class="control-label col-sm-4" for="carbody">Typ nadwozia:</label>
                 <div class="col-sm-8">
-                    <input class="form-control" id="nadwozie" name="nadwozie">
+                    <input class="form-control" id="carbody" name="carbody">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-4" for="ubezpieczenie">Numer ubezpieczenia:</label>
+                <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
                 <div class="col-sm-8">
-                    <input class="form-control" id="ubezpieczenie" name="ubezpieczenie">
+                    <input class="form-control" id="insurance_number" name="insurance_number">
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="control-label col-sm-4" for="stan">Stan:</label>
+                <label class="control-label col-sm-4" for="state">Stan:</label>
                 <div class="col-sm-8">
-                    <input class="form-control" id="stan" name="stan">
+                    <input class="form-control" id="state" name="state">
                 </div>
             </div>
 
