login and regions tests

--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -17,6 +17,12 @@
     <div class="container" style="margin-top: 5vh">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <h2 style="text-align: center">Regions</h2>
+			<div>
+				<button type="button" name="actualUpdates" onclick="location.href='/actualUpdates'">Wyświetl aktualnie przeprowadzane aktualizacje</button>
+				<button type="button" name="manualActualization" onclick="location.href='/manualActualization'" name="manualActualization" >Ręczna aktualizacja stanu dróg</button>
+				<button type="button" name="updatesHistory" onclick="location.href='/updatesHistory'">Historia aktualizacji</button>
+			<div>
+			<h2></h2>
             <div id="map1"></div>
         </div>
     </div>
