--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,3 +5,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+.container {
+    margin-top: 5vh;
+}
+.buttons-panel {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+h2 {
+    text-align: center;
+}
+.btn {
+    margin: 10px 10px 10px 10px;
+}
