Include drivers urls as a separate file Remove car_id and driver_id - it is provided by django as id by default

--- a/templates/drivers/list.html
+++ b/templates/drivers/list.html
@@ -14,13 +14,13 @@
                 <h2 style="text-align: center">Lista Driver:</h2>
             </div>
             <div class="col-md-2">
-                <a href="{% url 'driver_create' %}" class="btn btn-default" role="button">Dodaj driver</a>
+                <a href="{% url 'drivers:create' %}" class="btn btn-default" role="button">Dodaj driver</a>
             </div>
         </div>
         {% if object_list %}
             <ul>
             {% for d in  object_list %}
-                <li>{{ d }} <a href="{% url 'driver_edit_basic' pk=d.pk %} "> Edytuj </a></li>
+                <li>{{ d }} <a href="{% url 'drivers:driver_edit_basic' pk=d.pk %} "> Edytuj </a></li>
             {% endfor %}
             </ul>
         {% else %}
