--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>GEO</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">GEO</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="">Obszary <span class="sr-only">(current)</span></a></li>
+                <li><a href="{% url "drivers:list" %}">Kierowcy</a></li>
+                <li><a href="#">Samochody</a></li>
+
+            </ul>
+
+            {% if request.user.is_authenticated %}
+                <p class="navbar-text navbar-right">Zalogowano jako {{ request.user.email }},
+                    <a href="{% url "logout" %}" class="navbar-link">wyloguj</a></p>
+            {% else %}
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{% url "login" %}">Zaloguj się</a></li>
+                </ul>
+            {% endif %}
+
+
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<script>
+    // not very sophisticated, adds class active to navbar element corresponding to current subpage
+    var a = $("a[href*='" + location.pathname + "']")[0];
+    jQuery(a).parent('li').addClass('active');
+</script>
