--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,5 +1,6 @@
-{% include 'header.html' %}
+{% extends 'base.html' %}
 
+{% block content %}
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-4 col-md-offset-4">
 
@@ -33,5 +34,4 @@
         </form>
     </div>
 </div>
-
-{% include 'footer.html' %}
+{% endblock %}
