--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -4,9 +4,9 @@
         <div class="col-lg-12 col-md-12 col-sm-12">
             <h2>Regions</h2>
 			<div class="buttons-panel">
-				<button type="button" class="btn btn-default" name="actualUpdates" onclick="location.href='/actualUpdates'">Wyświetl aktualnie przeprowadzane aktualizacje</button>
-				<button type="button" class="btn btn-default" name="manualActualization" onclick="location.href='/manualActualization'" name="manualActualization" >Ręczna aktualizacja stanu dróg</button>
-				<button type="button" class="btn btn-default" name="updatesHistory" onclick="location.href='/updatesHistory'">Historia aktualizacji</button>
+				<a type="button" class="btn btn-default" name="actualUpdates" href="/regions/actualUpdates">Wyświetl aktualnie przeprowadzane aktualizacje</a>
+				<a type="button" class="btn btn-default" name="manualActualization" href="/regions/manualActualization" name="manualActualization" >Ręczna aktualizacja stanu dróg</a>
+				<a type="button" class="btn btn-default" name="updatesHistory" href="/regions/updatesHistory">Historia aktualizacji</a>
             </div>
             <div id="map1"></div>
         </div>
