minor changes with regions view and proper navigation from navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
+body {
+    min-height: 100%;
+}
 #map1 {
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     display: block;
     margin-left: auto;
     margin-right: auto;
