--- a/templates/header.html
+++ b/templates/header.html
@@ -29,7 +29,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="">Obszary <span class="sr-only">(current)</span></a></li>
+                <li><a href="{% url "regions:regions" %}">Obszary <span class="sr-only">(current)</span></a></li>
                 <li><a href="{% url "drivers:list" %}">Kierowcy</a></li>
                 <li><a href="#">Samochody</a></li>
 
