--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -2,7 +2,7 @@
    {% block pagecontent %}
     <div class="container">
         <div class="col-lg-12 col-md-12 col-sm-12">
-            <h2>Regions</h2>
+            <h2>Obszary</h2>
 			<div class="buttons-panel">
 				<a type="button" class="btn btn-default" name="actualUpdates" href="/regions/actualUpdates">Wyświetl aktualnie przeprowadzane aktualizacje</a>
 				<a type="button" class="btn btn-default" name="manualActualization" href="/regions/manualActualization" name="manualActualization" >Ręczna aktualizacja stanu dróg</a>
