--- a/templates/regions/add_driver_to_region.html
+++ b/templates/regions/add_driver_to_region.html
@@ -1,7 +1,7 @@
 {% include 'header.html' %}
 
-<div class="container" style="margin-top: 5vh">
-    <div class="col-md-10 col-md-offset-1">
+<div class="container">
+    <div class="col-lg-12 col-md-12 col-sm-12">
 
         {% if success_message %}
             <div class="alert alert-success">
@@ -10,8 +10,17 @@
         {% endif %}
 
         <div class="row">
-            <div class="col-md-8">
-                <h2 style="text-align: center">Przydziel zasoby do wybranego obszaru</h2>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <h2>Przydziel zasoby do wybranego obszaru</h2>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 container-resources">
+                <h4>Wybierz kierowcę:</h4>
+                <select class="form-control">
+                    {% for value in drivers %}
+                    <option>{{value.full_name}}</option>
+                    {% endfor %}
+                </select>
+                <button class="btn btn-default save-button">Zapisz</button>
             </div>
             
         </div>
