changes taking into consideration base.html file

--- a/templates/regions/add_driver_to_region.html
+++ b/templates/regions/add_driver_to_region.html
@@ -1,5 +1,5 @@
-{% include 'header.html' %}
-
+{% extends 'base.html' %}
+{% block content %}
 <div class="container">
     <div class="col-lg-12 col-md-12 col-sm-12">
 
@@ -27,5 +27,4 @@
 
     </div>
 </div>
-
-{% include 'footer.html' %}
+{% endblock %}
