--- a/templates/regions/regions.html
+++ b/templates/regions/regions.html
@@ -1,5 +1,5 @@
-{% include 'header.html' %}
-   {% block pagecontent %}
+{% extends 'base.html' %}
+   {% block content %}
     <div class="container">
         <div class="col-lg-12 col-md-12 col-sm-12">
             <h2>Obszary</h2>
@@ -26,4 +26,3 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdWvcN-Awg6yJiQXUvcYYTa-DnNesUny4&amp;callback=myMap" async="" defer=""></script>
 
 {% endblock %}
-{% include 'footer.html' %}
