--- a/templates/drivers/create_form.html
+++ b/templates/drivers/create_form.html
@@ -1,18 +1,36 @@
 {% include 'header.html' %}
 
 <div class="container" style="margin-top: 5vh">
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-8 col-md-offset-2">
         <h2 style="text-align: center">Dodaj Driver</h2>
+        <h2>{{ success }}</h2>
         <h2>{{ error }}</h2>
 
 
         <form class="form-horizontal" action="" method="post">
             {% csrf_token %}
             {{ form.non_field_errors }}
-            {{ form }}
             <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-default">Zapisz</button>
+                <div class="col-md-8 col-md-offset-2">
+                    <button type="submit" class="btn btn-success">Save</button>
+                    <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back</a>
+                </div>
+            </div>
+            {% for field in form %}
+                <div class="form-group">
+                    <div class="col-md-4 col-md-offset-left-2">
+                        {{ field.errors }}
+                        {{ field.label_tag }}
+                    </div>
+                    <div class="col-md-4 col-md-offset-right-2">
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+            <div class="form-group">
+                <div class="col-md-offset-4 col-md-8">
+                    <button type="submit" class="btn btn-success btn-block">Save</button>
+                    <a type="button" class="btn btn-danger btn-block" href="{% url 'drivers:list' %} ">Go back</a>
                 </div>
             </div>
         </form>
@@ -20,3 +38,20 @@
 </div>
 
 {% include 'footer.html' %}
+
+{% comment %}<div class="panel-body">
+    <span class="term-description">{% trans 'Full name' %}</span>
+    <hr>
+    <textarea id="{{ form.full_name }}" name="{{ form.full_name }}"
+              class="js_ckeditor_terms"
+              data-constraints="{% if form.full_name.required %}@Required{% endif %}"
+              class="form-control {% if form.full_name.errors %}form-control-has-validation{% endif %}">{% if form.full_name.data %}
+        {{ form.full_name.data }} {% elif form.full_name.value %}
+        {{ form.full_name.value }}{% endif %}
+    </textarea>
+    {% if form.full_name.errors %}
+        {% for error in form.full_name.errors %}
+            <span class="form-validation">{{ error }}</span>
+        {% endfor %}
+    {% endif %}
+</div>{% endcomment %}
