--- a/templates/drivers/driver_cars_form.html
+++ b/templates/drivers/driver_cars_form.html
@@ -3,16 +3,26 @@
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-6 col-md-offset-2">
         <h2 style="text-align: center">Dodaj Car</h2>
+        <h2>{{ success }}</h2>
         <h2>{{ error }}</h2>
-
 
         <form class="form-horizontal" action="" method="post">
             {% csrf_token %}
             {{ form.non_field_errors }}
-            {{ form }}
+            {% for field in form %}
+                <div class="form-group">
+                    <div class="col-md-4 col-md-offset-left-2">
+                        {{ field.errors }}
+                    </div>
+                    <div class="col-md-4 col-md-offset-right-2">
+                        {{ field.label_tag }} {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
             <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-default">Zapisz</button>
+                    <button type="submit" class="btn btn-success">Save</button>
+                    <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back</a>
                 </div>
             </div>
         </form>
