Refactored templates, removed footer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    {% include 'header.html' %}
+    {% include 'navbar.html' %}
+
     {% block content %}{% endblock %}
-    {% include 'footer.html' %}
 </body>
 </html>
