--- a/templates/cars/list.html
+++ b/templates/cars/list.html
@@ -1,4 +1,6 @@
-{% include 'header.html' %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-10 col-md-offset-1">
@@ -44,5 +46,4 @@
     </div>
 </div>
 
-{% include 'footer.html' %}
-
+{% endblock %}
