--- a/templates/drivers/list.html
+++ b/templates/drivers/list.html
@@ -1,4 +1,6 @@
-{% include 'header.html' %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 <div class="container" style="margin-top: 5vh">
     <div class="col-md-10 col-md-offset-1">
@@ -30,5 +32,5 @@
     </div>
 </div>
 
-{% include 'footer.html' %}
+{% endblock %}
 
