--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,26 +5,23 @@
     margin-left: auto;
     margin-right: auto;
 }
-.container {
-    margin-top: 5vh;
-}
+
 .buttons-panel {
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
 }
+
 h2 {
     text-align: center;
-}
-.btn {
-    margin: 10px 10px 10px 10px;
 }
 
 /* violet bar below navbar */
 .navbar-default {
     border-color: #5000B2;
 }
+
 .navbar-static-top {
-    border-width: 0 0 3px;
+    border-width: 2px 0 2px;
 }
