--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 5vh">
+<div class="container">
     <div class="col-md-6 col-md-offset-2">
-        <h2 style="text-align: center">Dodaj Samochód</h2>
+        <h2>Dodaj Samochód</h2>
         <h2></h2>
         <form class="form-horizontal" action="/cars/add" method="post">
             <div class="form-group">
