--- a/templates/cars/list.html
+++ b/templates/cars/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 5vh">
+<div class="container">
     <div class="col-md-10 col-md-offset-1">
 
         {% if success_message %}
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <h2 style="text-align: center">Lista Samochodów:</h2>
+                <h2>Lista Samochodów:</h2>
             </div>
             <div class="col-md-2">
                 <a href="add" class="btn btn-default" role="button">Dodaj Samochód</a>
