--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div class="container" style="margin-top: 5vh">
+<div class="container">
     <div class="col-md-4 col-md-offset-4">
 
-        <h2 style="text-align: center">Zaloguj się</h2>
+        <h2>Zaloguj się</h2>
 
         {% if error %}
             <div class="alert alert-danger">
