--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -2,67 +2,73 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="col-md-6 col-md-offset-2">
-        <h2>Dodaj Samochód</h2>
-        <h2></h2>
-        <form class="form-horizontal" action="/cars/add" method="post">
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="brand">Marka:</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="brand" name="brand">
-                </div>
-            </div>
+    <div class="container">
+        <div class="col-md-6 col-md-offset-2">
+            <h2>Dodaj Samochód</h2>
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="model">Model:</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="model" name="model">
+            {% if error %}
+                <div class="alert alert-danger">
+                    {{ error }}
                 </div>
-            </div>
+            {% endif %}
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
-                <div class="col-sm-8">
-                    <input type="number" class="form-control" id="production_year" name="production_year">
+            <form class="form-horizontal" action="/cars/add" method="post">
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="brand">Marka:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="brand" name="brand">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="displacement">Pojemność silnika:</label>
-                <div class="col-sm-8">
-                    <input type="number" class="form-control" id="displacement" name="displacement">
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="model">Model:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="model" name="model">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="carbody">Typ nadwozia:</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="carbody" name="carbody">
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
+                    <div class="col-sm-8">
+                        <input type="number" class="form-control" id="production_year" name="production_year">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="insurance_number" name="insurance_number">
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="engine_volume">Pojemność silnika:</label>
+                    <div class="col-sm-8">
+                        <input type="number" class="form-control" id="engine_volume" name="engine_volume">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-sm-4" for="state">Stan:</label>
-                <div class="col-sm-8">
-                    <input class="form-control" id="state" name="state">
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="carbody">Typ nadwozia:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="carbody" name="carbody">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-default">Zapisz</button>
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="insurance_number" name="insurance_number">
+                    </div>
                 </div>
-            </div>
-        </form>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="needs_repair">Stan:</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" id="needs_repair" name="needs_repair">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button type="submit" class="btn btn-default">Zapisz</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
 {% endblock %}
