--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -42,9 +42,9 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-4" for="carbody">Typ nadwozia:</label>
+                    <label class="control-label col-sm-4" for="body_type">Typ nadwozia:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="carbody" name="carbody">
+                        <input class="form-control" id="body_type" name="body_type">
                     </div>
                 </div>
 
