--- a/templates/cars/car_list_final.html
+++ b/templates/cars/car_list_final.html
@@ -21,7 +21,6 @@
             </div>
 
             {% if all_cars %}
-
                 {% for car in all_cars %}
                     <div class="panel panel-primary">
                         <div class="panel-heading">{{ car.brand }} {{ car.model }}</div>
@@ -30,7 +29,7 @@
                             <p><b>Model:</b> {{ car.model }}</p>
                             <p><b>Rocznik:</b> {{ car.production_year }}</p>
                             <p><b>Pojemność silnika:</b> {{ car.engine_volume }}</p>
-                            <p><b>Typ nadwozia:</b> {{ car.carbody }}</p>
+                            <p><b>Typ nadwozia:</b> {{ car.body_type }}</p>
                             <p><b>Numer ubezpieczenia:</b> {{ car.insurance_number }}</p>
                             <p><b>Dostępność:</b> {{ car.is_available }}</p>
                             <p><b>Stan:</b> {{ car.needs_repair }}</p>
@@ -38,7 +37,6 @@
                         </div>
                     </div>
                 {% endfor %}
-
             {% else %}
                 <h3>Brak samochodów.</h3>
             {% endif %}
