--- a/templates/drivers/create_form.html
+++ b/templates/drivers/create_form.html
@@ -7,16 +7,11 @@
         <h2>{{ error }}</h2>
 
 
-        <form class="form-horizontal" action="" method="post">
-            {% csrf_token %}
-            {{ form.non_field_errors }}
-            <div class="form-group">
-                <div class="col-md-8 col-md-offset-2">
-                    <button type="submit" class="btn btn-success">Save</button>
-                    <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back</a>
-                </div>
-            </div>
-            {% for field in form %}
+        <form class="well form-horizontal" action="" method="post" id="create_driver_form">
+            <fieldset>
+                {% csrf_token %}
+                {{ form.non_field_errors }}
+                {% comment %}            {% for field in form %}
                 <div class="form-group">
                     <div class="col-md-4 col-md-offset-left-2">
                         {{ field.errors }}
@@ -26,13 +21,85 @@
                         {{ field }}
                     </div>
                 </div>
-            {% endfor %}
-            <div class="form-group">
-                <div class="col-md-offset-4 col-md-8">
-                    <button type="submit" class="btn btn-success btn-block">Save</button>
-                    <a type="button" class="btn btn-danger btn-block" href="{% url 'drivers:list' %} ">Go back</a>
+            {% endfor %}{% endcomment %}
+                <div class="form-group">
+                    <label class="col-md-4 control-label">{{ form.full_name.label_tag }}</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input name="full_name" placeholder="Full name" class="form-control" type="text">
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">{{ form.gender.label_tag }}</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <select name="gender" class="form-control selectpicker">
+                                <option value="">Select your gender</option>
+                                <option>man</option>
+                                <option>woman</option>
+                                <option>other</option>
+                                <option>apache helicopter</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Schedule</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                            <textarea class="form-control" name="schedule" placeholder="Schedule"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Pesel</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-info-sign"></i></span>
+                            <input name="pesel" placeholder="71010111111" class="form-control" type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Phone number</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                            <input name="phone_number" placeholder="600600600" class="form-control" type="text">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Permissions level</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-cog"></i></span>
+                            <select name="permissions_level" class="form-control selectpicker">
+                                <option value="">Select permissions level</option>
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>{
+                <div class="alert alert-success" role="alert" id="success_message">Success <i
+                        class="glyphicon glyphicon-thumbs-up"></i> Saved successfully!
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4">
+                        <button type="submit" class="btn btn-warning">Save<span class="glyphicon glyphicon-send"></span>
+                        </button>
+                        <a type="button" class="btn btn-danger" href="{% url 'drivers:list' %} ">Go back<span
+                                class="glyphicon glyphicon-remove"></span></a>
+                    </div>
+                </div>
+            </fieldset>
         </form>
     </div>
 </div>
