--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" />
+    <script src="{% static 'js/script.js' %}" type="application/javascript"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
