--- a/templates/cars/car_add.html
+++ b/templates/cars/car_add.html
@@ -12,59 +12,70 @@
                 </div>
             {% endif %}
 
-            <form class="form-horizontal" action="/cars/add" method="post">
+            {{ field.errors }}
+
+            <form class="form-horizontal" action="" method="post">
+                {% csrf_token %}
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="brand">Marka:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="brand" name="brand">
+                        {{form.brand}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="model">Model:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="model" name="model">
+                        {{form.model}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
                     <div class="col-sm-8">
-                        <input type="number" class="form-control" id="production_year" name="production_year">
+                        {{form.production_year}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="engine_volume">Pojemność silnika:</label>
                     <div class="col-sm-8">
-                        <input type="number" class="form-control" id="engine_volume" name="engine_volume">
+                        {{form.engine_volume}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="body_type">Typ nadwozia:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="body_type" name="body_type">
+                        {{form.body_type}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="insurance_number" name="insurance_number">
+                        {{form.insurance_number}}
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-sm-4" for="needs_repair">Stan:</label>
+                    <label class="control-label col-sm-4" for="need_repair">Stan:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="needs_repair" name="needs_repair">
+                        {{form.need_repair}}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-4" for="is_available">Dostępność:</label>
+                    <div class="col-sm-8">
+                        {{form.is_available}}
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
                         <button type="submit" class="btn btn-default">Zapisz</button>
+
                     </div>
                 </div>
             </form>
