all final templates for cars working, with all features

--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -5,9 +5,11 @@
     <div class="container">
         <div class="col-md-10 col-md-offset-1">
 
-            {% if success_message %}
+            {% if messages %}
                 <div class="alert alert-success">
-                    {{ success_message }}
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
                 </div>
             {% endif %}
 
