--- a/templates/cars/car_add.html
+++ b/templates/cars/car_add.html
@@ -6,20 +6,19 @@
         <div class="col-md-6 col-md-offset-2">
             <h2>Dodaj Samochód</h2>
 
-            {% if error %}
+            {% if form.errors %}
                 <div class="alert alert-danger">
-                    {{ error }}
+                    {% for field in form %}
+                        {{ field.errors }}
+                    {% endfor %}
                 </div>
             {% endif %}
-
-            {{ field.errors }}
 
             <form class="form-horizontal" action="" method="post">
                 {% csrf_token %}
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="brand">Marka:</label>
                     <div class="col-sm-8">
-                        {{form.brand.errors}}
                         {{form.brand}}
                     </div>
                 </div>
@@ -27,7 +26,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="model">Model:</label>
                     <div class="col-sm-8">
-                        {{form.model.errors}}
                         {{form.model}}
                     </div>
                 </div>
@@ -35,7 +33,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
                     <div class="col-sm-8">
-                        {{form.production_year.errors}}
                         {{form.production_year}}
                     </div>
                 </div>
@@ -43,7 +40,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="engine_volume">Pojemność silnika:</label>
                     <div class="col-sm-8">
-                        {{form.engine_volume.errors}}
                         {{form.engine_volume}}
                     </div>
                 </div>
@@ -51,7 +47,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="body_type">Typ nadwozia:</label>
                     <div class="col-sm-8">
-                        {{form.body_type.errors}}
                         {{form.body_type}}
                     </div>
                 </div>
@@ -59,7 +54,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
                     <div class="col-sm-8">
-                        {{form.insurance_number.errors}}
                         {{form.insurance_number}}
                     </div>
                 </div>
@@ -67,7 +61,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="need_repair">Stan:</label>
                     <div class="col-sm-8">
-                        {{form.need_repair.errors}}
                         {{form.need_repair}}
                     </div>
                 </div>
@@ -75,7 +68,6 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="is_available">Dostępność:</label>
                     <div class="col-sm-8">
-                        {{form.is_available.errors}}
                         {{form.is_available}}
                     </div>
                 </div>
@@ -83,7 +75,9 @@
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
                         <button type="submit" class="btn btn-default">Zapisz</button>
-
+                    </div>
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button class="btn btn-default" name="cancel" formnovalidate>Anuluj</button>
                     </div>
                 </div>
             </form>
