--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Zaloguj</button>
+                    <button type="submit" class="btn btn-outline-geo">Zaloguj</button>
                 </div>
             </div>
         </form>
