Updated menu and styling.

--- a/templates/cars/car_list.html
+++ b/templates/cars/car_list.html
@@ -15,10 +15,10 @@
 
             <div class="row">
                 <div class="col-md-8">
-                    <h2>Lista Samochodów:</h2>
+                    <h2 class="list-title">Lista Samochodów:</h2>
                 </div>
-                <div class="col-md-2">
-                    <a href="{% url 'cars:car_create' %}" class="btn btn-default" role="button">Dodaj Samochód</a>
+                <div class="col-md-4">
+                    <a href="{% url 'cars:car_create' %}" class="btn btn-outline-geo pull-right" role="button">Dodaj Samochód</a>
                 </div>
             </div>
 
