--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,10 +19,15 @@ body {
 
 h2 {
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .save-button {
     float: right;
+}
+
+.list-title {
+    text-align: start;
 }
 
 .container-resources {
@@ -44,6 +49,7 @@ h2 {
     background-color: transparent;
     border-color: #5000b2;
     transition: all .2s ease-in-out;
+    margin: 10px 0;
 }
 
 .btn-outline-geo:hover {
@@ -61,4 +67,10 @@ h2 {
     color: #fff;
     background-color: #5000B2;
     border-color: #5000B2;
+}
+
+#id_is_available {
+    outline: none;
+    box-shadow: none;
+    width: 26px;
 }
