--- a/templates/cars/car_add.html
+++ b/templates/cars/car_add.html
@@ -74,7 +74,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-default">Zapisz</button>
+                        <button type="submit" class="btn btn-outline-geo">Zapisz</button>
                     </div>
                     <div class="col-sm-offset-4 col-sm-8">
                         <button class="btn btn-default" name="cancel" formnovalidate>Anuluj</button>
