--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="{% url "regions:regions" %}">Obszary <span class="sr-only">(current)</span></a></li>
                 <li><a href="{% url "drivers:list" %}">Kierowcy</a></li>
-                <li><a href="#">Samochody</a></li>
+                <li><a href="{% url "cars:car_list" %}">Samochody</a></li>
 
             </ul>
 
